jsDAV server actually works!

--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   },
   "homepage": "https://github.com/jeremyhewett/webdav#readme",
   "dependencies": {
-    "es6-promisify": "^5.0.0",
     "express": "^4.16.2",
+    "jsDAV": "^0.3.4",
+    "on-headers": "^1.0.1",
     "webdav-server": "^2.3.13"
   }
 }
