--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cookies": "^0.7.1",
     "express": "^4.16.2",
     "jsDAV": "^0.3.4",
+    "lodash": "^4.17.4",
     "on-headers": "^1.0.1",
     "webdav-server": "^2.3.13"
   }
