--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
     "angularjs": "0.0.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
+    "extract-zip": "^1.6.7",
+    "fs-extra": "^7.0.1",
     "jsDAV": "^0.3.4",
     "lodash": "^4.17.4",
-    "on-headers": "^1.0.1"
+    "on-headers": "^1.0.1",
+    "uuid": "^3.3.2",
+    "xml2js": "^0.4.19",
+    "zip-a-folder": "0.0.7"
   }
 }
